# vibe_coding

./: .cursorrules  .gitignore  SETUP_GUIDE.md  opencode_setup.md  python-environments.code-workspace  verify_env.py
python312_qt6/: check_chroma.py  main.py  pyproject.toml  test_rag.py
python312_qt6/docstyle-pro_claude_v4/: .gitignore  DocStylePro_Template.dotx  WEB_API.md  WORKLOG_2026-02-26.md  main.py  pyproject.toml  requirements.txt  test_doc.md
python312_qt6/docstyle-pro_claude_v4/bridge/: ai_organizer.py  converter.py  json_builder.py  vault_indexer.py
python312_qt6/docstyle-pro_claude_v4/engine/: package-lock.json  package.json  test_docx_slice.js
python312_qt6/docstyle-pro_claude_v4/engine/core/: builder.js  colors.js  elements.js
python312_qt6/docstyle-pro_claude_v4/engine/templates/: t01_template.js  t03_template.js  t10_template.js  template_01_classic.js  template_02_minimal.js  template_03_nordic.js  template_04_luxury.js  template_05_academic.js  template_06_tech.js  template_07_warm.js  template_08_bold.js  template_09_forest.js  template_10_royal.js  template_11_clinical.js  (+39 more)
python312_qt6/docstyle-pro_claude_v4/gui/: api_settings_dialog.py  file_drop_zone.py  main_window.py  preview_panel.py  settings_panel.py  structure_doctor.py  template_auto_polish_levels.json  vault_explorer.py
python312_qt6/docstyle-pro_claude_v4/parser/: docx_parser.py  models.py  structure_analyzer.py
python312_qt6/docstyle-pro_claude_v4/web/: api.py  run_api.py
python312_qt6/docstyle-pro_claude_v4/web_frontend/: README.md  package-lock.json  package.json
(+136 files in other folders)
