[project]
name = "python312-qt6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.83.0",
    "chromadb>=1.5.1",
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.2.4",
    "google-genai>=1.64.0",
    "lxml>=5.0.0",
    "markdown>=3.10.2",
    "onnxruntime<=1.19.2",
    "openai>=2.24.0",
    "pillow>=10.0.0",
    "pyqt6>=6.0.0",
    "python-docx>=1.1.0",
]
